// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`BpkGraphicPromo should display the tagline and no sponsor for non-sponsored ad 1`] = `
<DocumentFragment>
  <div
    aria-label="Tagline. Ride your wave. Portugal and 6 more countries have just been added to the UK travel green list. Learn more"
    class="bpk-card bpk-graphic-promo"
    id="mock-content-id"
    role="link"
    tabindex="0"
  >
    <div
      aria-hidden="true"
      class="bpk-graphic-promo__container bpk-graphic-promo__container--start"
      id="mock-content-id__content"
    >
      <div
        class="bpk-graphic-promo__sponsor-content bpk-graphic-promo__sponsor-content--start"
      />
      <div
        class="bpk-graphic-promo__promo-content bpk-graphic-promo__promo-content--start"
      >
        <span
          class="bpk-graphic-promo__tagline"
        >
          Tagline
        </span>
        <h2
          class="bpk-graphic-promo__headline"
        >
          Ride your wave
        </h2>
        <p
          class="bpk-graphic-promo__subheading"
        >
          Portugal and 6 more countries have just been added to the UK travel green list
        </p>
        <button
          class="bpk-button bpk-button--primary-on-dark bpk-graphic-promo__cta"
          data-backpack-ds-component="Button"
          tabindex="-1"
          type="button"
        >
          Learn more
        </button>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`BpkGraphicPromo should not display tagline or subheading when not provided 1`] = `
<DocumentFragment>
  <div
    aria-label="Sponsored. Airline Name. Ride your wave. Learn more"
    class="bpk-card bpk-graphic-promo"
    id="mock-content-id"
    role="link"
    tabindex="0"
  >
    <div
      aria-hidden="true"
      class="bpk-graphic-promo__container bpk-graphic-promo__container--start"
      id="mock-content-id__content"
    >
      <div
        class="bpk-graphic-promo__sponsor-content bpk-graphic-promo__sponsor-content--start"
      >
        <span
          class="bpk-graphic-promo__sponsor-label"
        >
          Sponsored
        </span>
        <img
          alt="Airline Name"
          class="bpk-graphic-promo__sponsor-logo"
          src="path/to/logo.png"
        />
      </div>
      <div
        class="bpk-graphic-promo__promo-content bpk-graphic-promo__promo-content--start"
      >
        <h2
          class="bpk-graphic-promo__headline"
        >
          Ride your wave
        </h2>
        <button
          class="bpk-button bpk-button--primary-on-dark bpk-graphic-promo__cta"
          data-backpack-ds-component="Button"
          tabindex="-1"
          type="button"
        >
          Learn more
        </button>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`BpkGraphicPromo should render as expected without a content ID 1`] = `
<DocumentFragment>
  <div
    aria-label="Sponsored. Airline Name. Ride your wave. Portugal and 6 more countries have just been added to the UK travel green list. Learn more"
    class="bpk-card bpk-graphic-promo"
    id=""
    role="link"
    tabindex="0"
  >
    <div
      aria-hidden="true"
      class="bpk-graphic-promo__container bpk-graphic-promo__container--start"
      id=""
    >
      <div
        class="bpk-graphic-promo__sponsor-content bpk-graphic-promo__sponsor-content--start"
      >
        <span
          class="bpk-graphic-promo__sponsor-label"
        >
          Sponsored
        </span>
        <img
          alt="Airline Name"
          class="bpk-graphic-promo__sponsor-logo"
          src="path/to/logo.png"
        />
      </div>
      <div
        class="bpk-graphic-promo__promo-content bpk-graphic-promo__promo-content--start"
      >
        <h2
          class="bpk-graphic-promo__headline"
        >
          Ride your wave
        </h2>
        <p
          class="bpk-graphic-promo__subheading"
        >
          Portugal and 6 more countries have just been added to the UK travel green list
        </p>
        <button
          class="bpk-button bpk-button--primary-on-dark bpk-graphic-promo__cta"
          data-backpack-ds-component="Button"
          tabindex="-1"
          type="button"
        >
          Learn more
        </button>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`BpkGraphicPromo should render correctly when centre aligned 1`] = `
<DocumentFragment>
  <div
    aria-label="Sponsored. Airline Name. Ride your wave. Portugal and 6 more countries have just been added to the UK travel green list. Learn more"
    class="bpk-card bpk-graphic-promo"
    id="mock-content-id"
    role="link"
    tabindex="0"
  >
    <div
      aria-hidden="true"
      class="bpk-graphic-promo__container bpk-graphic-promo__container--center"
      id="mock-content-id__content"
    >
      <div
        class="bpk-graphic-promo__sponsor-content bpk-graphic-promo__sponsor-content--center"
      >
        <span
          class="bpk-graphic-promo__sponsor-label"
        >
          Sponsored
        </span>
        <img
          alt="Airline Name"
          class="bpk-graphic-promo__sponsor-logo"
          src="path/to/logo.png"
        />
      </div>
      <div
        class="bpk-graphic-promo__promo-content bpk-graphic-promo__promo-content--center"
      >
        <h2
          class="bpk-graphic-promo__headline"
        >
          Ride your wave
        </h2>
        <p
          class="bpk-graphic-promo__subheading"
        >
          Portugal and 6 more countries have just been added to the UK travel green list
        </p>
        <button
          class="bpk-button bpk-button--primary-on-dark bpk-graphic-promo__cta"
          data-backpack-ds-component="Button"
          tabindex="-1"
          type="button"
        >
          Learn more
        </button>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`BpkGraphicPromo should render correctly when inverted portrait 1`] = `
<DocumentFragment>
  <div
    aria-label="Sponsored. Airline Name. Ride your wave. Portugal and 6 more countries have just been added to the UK travel green list. Learn more"
    class="bpk-card bpk-graphic-promo"
    id="mock-content-id"
    role="link"
    tabindex="0"
  >
    <div
      aria-hidden="true"
      class="bpk-graphic-promo__container bpk-graphic-promo__container--start bpk-graphic-promo__container--inverted"
      id="mock-content-id__content"
    >
      <div
        class="bpk-graphic-promo__sponsor-content bpk-graphic-promo__sponsor-content--start"
      >
        <span
          class="bpk-graphic-promo__sponsor-label"
        >
          Sponsored
        </span>
        <img
          alt="Airline Name"
          class="bpk-graphic-promo__sponsor-logo"
          src="path/to/logo.png"
        />
      </div>
      <div
        class="bpk-graphic-promo__promo-content bpk-graphic-promo__promo-content--start"
      >
        <h2
          class="bpk-graphic-promo__headline"
        >
          Ride your wave
        </h2>
        <p
          class="bpk-graphic-promo__subheading"
        >
          Portugal and 6 more countries have just been added to the UK travel green list
        </p>
        <button
          class="bpk-button bpk-button--primary-on-dark bpk-graphic-promo__cta"
          data-backpack-ds-component="Button"
          tabindex="-1"
          type="button"
        >
          Learn more
        </button>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`BpkGraphicPromo should render correctly when right aligned 1`] = `
<DocumentFragment>
  <div
    aria-label="Sponsored. Airline Name. Ride your wave. Portugal and 6 more countries have just been added to the UK travel green list. Learn more"
    class="bpk-card bpk-graphic-promo"
    id="mock-content-id"
    role="link"
    tabindex="0"
  >
    <div
      aria-hidden="true"
      class="bpk-graphic-promo__container bpk-graphic-promo__container--end"
      id="mock-content-id__content"
    >
      <div
        class="bpk-graphic-promo__sponsor-content bpk-graphic-promo__sponsor-content--end"
      >
        <span
          class="bpk-graphic-promo__sponsor-label"
        >
          Sponsored
        </span>
        <img
          alt="Airline Name"
          class="bpk-graphic-promo__sponsor-logo"
          src="path/to/logo.png"
        />
      </div>
      <div
        class="bpk-graphic-promo__promo-content bpk-graphic-promo__promo-content--end"
      >
        <h2
          class="bpk-graphic-promo__headline"
        >
          Ride your wave
        </h2>
        <p
          class="bpk-graphic-promo__subheading"
        >
          Portugal and 6 more countries have just been added to the UK travel green list
        </p>
        <button
          class="bpk-button bpk-button--primary-on-dark bpk-graphic-promo__cta"
          data-backpack-ds-component="Button"
          tabindex="-1"
          type="button"
        >
          Learn more
        </button>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`BpkGraphicPromo should render correctly with all properties set 1`] = `
<DocumentFragment>
  <div
    aria-label="Sponsored. Airline Name. Ride your wave. Portugal and 6 more countries have just been added to the UK travel green list. Learn more"
    class="bpk-card bpk-graphic-promo"
    id="mock-content-id"
    role="link"
    tabindex="0"
  >
    <div
      aria-hidden="true"
      class="bpk-graphic-promo__container bpk-graphic-promo__container--start"
      id="mock-content-id__content"
    >
      <div
        class="bpk-graphic-promo__sponsor-content bpk-graphic-promo__sponsor-content--start"
      >
        <span
          class="bpk-graphic-promo__sponsor-label"
        >
          Sponsored
        </span>
        <img
          alt="Airline Name"
          class="bpk-graphic-promo__sponsor-logo"
          src="path/to/logo.png"
        />
      </div>
      <div
        class="bpk-graphic-promo__promo-content bpk-graphic-promo__promo-content--start"
      >
        <h2
          class="bpk-graphic-promo__headline"
        >
          Ride your wave
        </h2>
        <p
          class="bpk-graphic-promo__subheading"
        >
          Portugal and 6 more countries have just been added to the UK travel green list
        </p>
        <button
          class="bpk-button bpk-button--primary-on-dark bpk-graphic-promo__cta"
          data-backpack-ds-component="Button"
          tabindex="-1"
          type="button"
        >
          Learn more
        </button>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`BpkGraphicPromo should support custom class names 1`] = `
<DocumentFragment>
  <div
    aria-label="Sponsored. Airline Name. Ride your wave. Portugal and 6 more countries have just been added to the UK travel green list. Learn more"
    class="bpk-card bpk-graphic-promo custom-classname"
    id="mock-content-id"
    role="link"
    tabindex="0"
  >
    <div
      aria-hidden="true"
      class="bpk-graphic-promo__container bpk-graphic-promo__container--start"
      id="mock-content-id__content"
    >
      <div
        class="bpk-graphic-promo__sponsor-content bpk-graphic-promo__sponsor-content--start"
      >
        <span
          class="bpk-graphic-promo__sponsor-label"
        >
          Sponsored
        </span>
        <img
          alt="Airline Name"
          class="bpk-graphic-promo__sponsor-logo"
          src="path/to/logo.png"
        />
      </div>
      <div
        class="bpk-graphic-promo__promo-content bpk-graphic-promo__promo-content--start"
      >
        <h2
          class="bpk-graphic-promo__headline"
        >
          Ride your wave
        </h2>
        <p
          class="bpk-graphic-promo__subheading"
        >
          Portugal and 6 more countries have just been added to the UK travel green list
        </p>
        <button
          class="bpk-button bpk-button--primary-on-dark bpk-graphic-promo__cta"
          data-backpack-ds-component="Button"
          tabindex="-1"
          type="button"
        >
          Learn more
        </button>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
